# tutorops

./: .gitignore  README.md  pyproject.toml  setup.py
src/nice_canvas/api/: __init__.py  canvas.py  config.py  http.py  rubrics.py  rubrics_controller.py  submissions.py
src/nice_canvas/cli/: canvas_download_zip.py
src/nice_canvas/qti/: __init__.py  interop.py  question.py
src/tutorops/canvas/api/: __init__.py  api.py  canvas.py  client.py
src/tutorops/canvas/api/endpoint/: assignments.py  files.py  quiz_submission_questions.py  quiz_submissions.py  rubrics.py  submissions.py  users.py
src/tutorops/canvas/qti/: __init__.py
src/tutorops/github/: __init__.py
