[build-system]
requires = [
    "setuptools>=64",    # Build backend
    "setuptools_scm>=8", # Versioning from SCM
    'PyXB-X',            # XML schema binding
]
build-backend = "setuptools.build_meta"

[project]
name = "tutorops"
dynamic = ["version"]
authors = [{ name = "Shen Jiamin", email = "shen_jiamin@u.nus.edu" }]
description = "A small package facilitating grading and question generation."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "httpx",         # HTTP client
    "python-dotenv", # Environment variables
    "PyXB-X",        # XML schema binding
]

[project.urls]
Homepage = "https://github.com/shnjmn/tutorops"
Issues = "https://github.com/shnjmn/tutorops/issues"

[tool.mypy]
exclude = ["^src/tutorops/canvas/qti/.*\\.py", "^venv/.*"]
follow_untyped_imports = true
